--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-hello world this is cs61 
+This is the lab materias on machine structures and low level computer architecture programming (MIPS), cache hierarchy . 
